--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
 
 
+    implementation 'com.google.android.gms:play-services-ads:21.4.0'
+
 
     // Add the dependency for the Firebase Authentication library
     // When using the BoM, you don't specify versions in Firebase library dependencies
